--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">My App aaa</string>
-    <string name="title_activity_main">My App aaa</string>
-    <string name="package_name">io.framework7.myapp</string>
-    <string name="custom_url_scheme">io.framework7.myapp</string>
+    <string name="app_name">Cosmoiler</string>
+    <string name="title_activity_main">Cosmoiler</string>
+    <string name="package_name">com.cosmoiler.app</string>
+    <string name="custom_url_scheme">com.cosmoiler.app</string>
 </resources>
